# Aegis-GCS

./: .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  build.bat  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: aegis.json
docs/: AegisGCS_Current_Implementation.html  architecture.md
orchestration/: README.md  completed_tasks.yaml  roadmap.yaml  tasks.yaml
orchestration/prompts/: planner.md  reviewer.md  worker.md
orchestration/runs/: P1-001_plan.md  P1-001_review.md  P1-001_run.md  P1-002_plan.md  P1-002_run.md  P1-003_plan.md  P1-003_review.md  P1-003_run.md  P1-004_plan.md  P1-004_review.md  P1-004_run.md  P1-005_plan.md  P1-005_review.md  P1-005_run.md  P1-006_plan.md  P1-006_review.md  P1-006_run.md  P1-007_plan.md  P1-007_review.md  P1-007_run.md  P1-008_plan.md  P1-008_review.md  P1-008_run.md  P1-009_plan.md  P1-009_review.md  P1-009_run.md
resources/: resources.qrc
src/: main.cpp
src/aegis/: __init__.py
src/aegis/core/: bus.py  interfaces.py  plugin_host.py  state.py
src/app/: application.cpp  application.hpp
src/core/: CMakeLists.txt
src/core/bus/: telemetry_bus.cpp  telemetry_bus.hpp
src/core/interfaces/: icommand_source.hpp  iplugin.hpp  itelemetry_sink.hpp
src/core/plugin_host/: plugin_host.cpp  plugin_host.hpp  plugin_meta.cpp  plugin_meta.hpp
src/core/state/: vehicle_state.cpp  vehicle_state.hpp
src/core/types/: common.hpp
src/map/: CMakeLists.txt  tile_cache.hpp  tile_loader.cpp  tile_loader.hpp  tile_types.hpp
src/plugins/alert_console/: CMakeLists.txt  alert_console.json  alert_console_plugin.cpp  alert_console_plugin.hpp
src/plugins/map_view/: CMakeLists.txt  follow_vehicle_controller.cpp  follow_vehicle_controller.hpp  map_math.hpp  map_view.json  map_view_plugin.cpp  map_view_plugin.hpp
src/plugins/mission_editor/: CMakeLists.txt  mission_editor.json  mission_editor_plugin.cpp  mission_editor_plugin.hpp
src/plugins/telemetry_hud/: CMakeLists.txt  telemetry_hud.json  telemetry_hud_plugin.cpp  telemetry_hud_plugin.hpp
src/telemetry/: CMakeLists.txt  connection_state_machine.cpp  connection_state_machine.hpp  mavlink_io.cpp  mavlink_io.hpp  parsers.cpp  parsers.hpp
src/telemetry/replay/: log_replay.cpp  log_replay.hpp
src/telemetry/types/: mavlink_types.hpp
src/ui/: CMakeLists.txt  dock_manager.cpp  dock_manager.hpp  main_window.cpp  main_window.hpp
src/ui/theme/: theme_engine.cpp  theme_engine.hpp
src/ui/widgets/: connection_bar.cpp  connection_bar.hpp  vehicle_status_bar.cpp  vehicle_status_bar.hpp
src/utils/: CMakeLists.txt  config_migrator.cpp  config_migrator.hpp  config_validator.cpp  config_validator.hpp  diagnostic_exporter.cpp  diagnostic_exporter.hpp  logging.cpp  logging.hpp  ring_buffer.hpp  simple_zip_writer.cpp  simple_zip_writer.hpp  thread_pool.cpp  thread_pool.hpp
tests/: CMakeLists.txt  test.bat
tests/core/: test_telemetry_bus.cpp  test_vehicle_state.cpp
tests/data/replay/: corpus.tlog
tests/map/: test_tile_cache.cpp  test_tile_loader.cpp
tests/plugins/: test_map_math.cpp
tests/plugins/map_view/: test_follow_vehicle.cpp
tests/telemetry/: test_connection_state_machine.cpp  test_log_replay.cpp  test_mavlink_io.cpp  test_parsers.cpp  test_replay_regression.cpp
tests/utils/: generate_replay_corpus.cpp  test_config_migrator.cpp  test_config_validator.cpp  test_diagnostic_exporter.cpp  test_logger.cpp  test_ring_buffer.cpp
