[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aegis-gcs"
version = "0.1.0"
description = "AEGIS — Aerospace Extensible Ground Control Station"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Applicant", email = "applicant@example.com"}
]
keywords = ["uas", "gcs", "mavlink", "qt", "pyside6", "aerospace", "telemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Interface Engine/Protocol Translator",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PySide6 >= 6.6.0",
    "pymavlink >= 2.4.30",
    "pydantic >= 2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-qt >= 4.2",
    "pytest-cov >= 4.0",
    "mypy >= 1.5",
    "ruff >= 0.1.0",
    "black >= 23.0",
]

[project.scripts]
aegis = "aegis.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "N", "UP", "B", "C4", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
qt_api = "pyside6"
addopts = "--cov=aegis --cov-report=term-missing --cov-report=html:htmlcov"
